--- a/src/static/style.css
+++ b/src/static/style.css
@@ -8,6 +8,8 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
+  background: url('../static/valltech.png') no-repeat center center fixed;
+  background-image: circular-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url('../static/valltech.png');
 }
 
 canvas#animated-background {
@@ -26,11 +28,11 @@ canvas#animated-background {
 }
 
 .login-container {
-  background: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.815);
   padding: 40px;
   width: 20%;
   border-radius: 12px;
-  box-shadow: 0px 8px 20px rgba(0,0,0,0.8);
+  box-shadow: 0px 8px 20px rgba(255, 94, 0, 0.8);
   text-align: center;
   animation: fadeIn 1s ease-in-out;
   border: 1px solid #ff6600;
@@ -84,4 +86,13 @@ canvas#animated-background {
 
 .btn:hover {
   background: #e65c00;
+}
+
+
+#caixas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
 }
