--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../static/style.css">
 </head>
     <body>
-        <canvas id="animated-background"></canvas>
+        <canvas id="caixas"></canvas>
 
         <div class="login-container" id="login-screen">
-            <img src="{{ url_for('static', filename='assets/logo.png') }}">
+            <img src="../static/assets/logo-branca.png" alt="Logo" class="logo">
             <form id="login-form">
             <div class="input-box">
                 <input type="text" id="operador" required>
@@ -23,6 +23,8 @@
             <button type="submit" class="btn">Entrar</button>
             </form>
         </div>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
         <script src="../static/background.js"></script>
         </body>
