--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -3,31 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../static/style.css">
+    <title>Gerenciador de Estoque - Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-    <body>
-        <canvas id="caixas"></canvas>
 
-        <div class="login-container" id="login-screen">
-            <img src="../static/assets/logo-branca.png" alt="Logo" class="logo">
-            <form id="login-form">
+<body>
+    <!-- <canvas id="caixas"></canvas> -->
+
+    <div class="login-container">
+        <h2>Login</h2>
+        <img src="{{ url_for('static', filename='assets/logo-branca.png') }}" alt="Logo" class="logo">
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            <div class="flash-messages">
+              {% for category, message in messages %}
+                <p class="flash {{ category }}">{{ message }}</p>
+              {% endfor %}
+            </div>
+          {% endif %}
+        {% endwith %}
+
+        <form method="POST" action="{{ url_for('login') }}">
             <div class="input-box">
-                <input type="text" id="operador" required>
+                <input type="text" name="operador" required>
                 <label>Operador</label>
             </div>
             <div class="input-box">
-                <input type="password" id="senha" required>
+                <input type="password" name="senha" required>
                 <label>Senha</label>
             </div>
-            <button type="submit" class="btn">Entrar</button>
-            </form>
-        </div>
+            <input type="submit" value="Entrar" class="btn"/>
+        </form>
+    </div>
+    
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
-
-        <script src="../static/background.js"></script>
-        </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+    <script src="{{ url_for('static', filename='background.js') }}" defer></script>
+</body>
 
 </html>
-
