--- a/src/templates/materiais.html
+++ b/src/templates/materiais.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiais</title>
 </head>
 <body>
-    <h1>Lista de Materiais</h1>
-    <a href="{{ url_for('novo_material') }}"> Adicionar Material</a>
+    <h2>Lista de Materiais</h2>
     <ul>
         {% for m in materiais %}
             <li>{{ m.nome }} - {{ m.quantidade }}</li>
         {% endfor %}
     </ul>
+    <a href="{{ url_for('novo_material') }}">Cadastrar Novo</a>
 </body>
 </html>
