--- a/src/templates/novo_material.html
+++ b/src/templates/novo_material.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Novo Material</title>
-</head>
-<body>
-    <h1>Cadastrar Material</h1>
-    <form method="post">
-        <label>Nome:</label><br>
-        <input type="text" name="nome"><br>
-        <label>Quantidade:</label><br>
-        <input type="number" name="quantidade"><br>
-        <button type="submit">Salvar</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='novomaterial.css') }}">
+{% endblock %}
+
+
+{% block content %}
+<div class="content-container">
+  <h2>Novo Material</h2>
+  <form method="POST">
+    <label for="nome">Nome:</label>
+    <input type="text" name="nome" id="nome" required>
+
+    <label for="quantidade">Quantidade:</label>
+    <input type="number" name="quantidade" id="quantidade" required>
+
+    <label for="lote">Lote:</label>
+    <input type="number" name="lote" id="lote" required>
+
+    <label for="estoque_minimo_chuva">Estoque Mínimo (Chuva):</label>
+    <input type="number" name="estoque_minimo_chuva" id="estoque_minimo_chuva" required>
+
+    <label for="estoque_minimo_seco">Estoque Mínimo (Seco):</label>
+    <input type="number" name="estoque_minimo_seco" id="estoque_minimo_seco" required>
+
+    <input type="submit" value="Salvar">
+  </form>
+</div>
+{% endblock %}
