--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -16,6 +16,7 @@
     <nav class="sidebar-nav">
       <a href="{{ url_for('listar_materiais') }}">Materiais</a>
       <a href="{{ url_for('novo_material') }}">Novo Material</a>
+      <a href="{{ url_for('usuarios') }}">Usuários</a>
       <a href="{{ url_for('logout') }}">Logout</a>
     </nav>
   </aside>
