--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -14,14 +14,14 @@
       <img src="{{ url_for('static', filename='./assets/logo-branca.png') }}" alt="Logo Valltech">
     </div>
     <nav class="sidebar-nav">
-      <a href="{{ url_for('listar_materiais') }}">Materiais</a>
-      <a href="{{ url_for('novo_material') }}">Novo Material</a>
-      <a href="{{ url_for('usuarios') }}">Usuários</a>
-      <a href="{{ url_for('logout') }}">Logout</a>
-    </nav>
+    <a href="{{ url_for('listar_materiais') }}">Materiais</a>
+    <a href="{{ url_for('novo_material') }}">Novo Material</a>
+    {# <a href="{{ url_for('usuarios') }}">Usuários</a> #}
+    <a href="{{ url_for('logout') }}">Logout</a>
+  </nav>
+
   </aside>
 
-  <!-- Conteúdo principal -->
   <main class="main-content">
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
