--- a/src/static/materiais.css
+++ b/src/static/materiais.css
@@ -2,7 +2,7 @@
 .materiais-container {
   max-width: 1000px;
   margin: auto;
-  background: rgba(255, 255, 255, 0.85); 
+  background: rgb(255, 255, 255); 
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.05);
