--- a/src/static/novomaterial.css
+++ b/src/static/novomaterial.css
@@ -1,7 +1,7 @@
 .content-container {
   width: 50%;
   margin: 60px auto;
-  background: rgba(255, 255, 255, 0.85); 
+  background: rgb(255, 255, 255); 
   padding: 40px 45px;
   border-radius: 14px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
