--- a/src/static/materiais.css
+++ b/src/static/materiais.css
@@ -24,7 +24,7 @@
 .btn-novo {
   display: inline-block;
   padding: 12px 20px;
-  background-color: #ff6600;
+  background-color: #ffa600;
   color: white;
   text-decoration: none;
   border-radius: 6px;
@@ -43,7 +43,7 @@
 }
 
 .materiais-tabela thead {
-  background-color: #ff6600;
+  background-color: #ff9100;
   color: white;
 }
 
@@ -55,9 +55,6 @@
   font-size: 15px;
 }
 
-.materiais-tabela tr:hover {
-  background-color: #f5f5f5;
-}
 
 .action-btn {
   margin-right: 8px;
