--- a/src/templates/materiais.html
+++ b/src/templates/materiais.html
@@ -7,7 +7,7 @@
 <div class="materiais-container">
   <div class="materiais-header">
     <h2>Lista de Materiais</h2>
-    <a class="btn-novo" href="{{ url_for('novo_material') }}">+ Cadastrar Novo Material</a>
+    <a class="btn-novo" href="{{ url_for('novo_material') }}">Cadastrar Novo Material</a>
   </div>
 
   <table class="materiais-tabela">
