--- a/src/static/style.css
+++ b/src/static/style.css
@@ -8,7 +8,7 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
-  background: url('../static/valltech.png') no-repeat center center fixed;
+  background: #0d0d0d;
 }
 
 canvas#animated-background {
@@ -114,12 +114,12 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 0; /* fundo */
+  z-index: 0; 
 }
 
 .login-container {
   position: relative;
-  z-index: 10; /* fica na frente */
+  z-index: 10; 
   background: rgba(255, 255, 255, 0.9);
   padding: 30px;
   border-radius: 12px;
