--- a/src/templates/clientes.html
+++ b/src/templates/clientes.html
@@ -8,7 +8,7 @@
 <div class="usuarios-container">
   <div class="usuarios-header">
     <h2>Lista de Clientes</h2>
-    <a class="btn-novo" href="{{ url_for('clientes.novo_cliente') }}">+ Cadastrar Novo Cliente</a>
+    <a class="btn-novo" href="{{ url_for('clientes.novo_cliente') }}">Cadastrar Novo Cliente</a>
   </div>
 
   <table class="usuarios-tabela">
