--- a/src/templates/usuarios.html
+++ b/src/templates/usuarios.html
@@ -7,7 +7,7 @@
 <div class="usuarios-container">
   <div class="usuarios-header">
     <h2>Lista de Usuários</h2>
-    <a class="btn-novo" href="{{ url_for('novo_usuario') }}">+ Cadastrar Novo Usuário</a>
+    <a class="btn-novo" href="{{ url_for('novo_usuario') }}">Cadastrar Novo Usuário</a>
   </div>
 
   <table class="usuarios-tabela">
