--- a/src/static/style.css
+++ b/src/static/style.css
@@ -120,7 +120,7 @@ canvas {
 .login-container {
   position: relative;
   z-index: 10; 
-  background: rgba(255, 255, 255, 0.9);
+  background: rgb(255, 255, 255);
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0,0,0,0.3);
