--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,8 +19,8 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a href="{{ url_for('movimentacoes.listar_movimentacoes') }}">Movimentações</a>
-      <a href="{{ url_for('movimentacoes.nova_movimentacao') }}">Cadastrar Movimentação</a>
+      <a href="{{ url_for('movimentacoes.listar_movimentacoes') }}">Histórico</a>
+      <a href="{{ url_for('movimentacoes.nova_movimentacao') }}">Cadastrar Retirada</a>
 
       <a href="{{ url_for('listar_materiais') }}">Materiais</a>
       <a href="{{ url_for('novo_material') }}">Novo Material</a>
@@ -49,5 +49,15 @@
     {% block content %}
     {% endblock %}
   </main>
+  <script>
+    setTimeout(() => {
+      document.querySelectorAll('.flash-message').forEach(el => {
+        el.style.transition = 'opacity 0.5s ease';
+        el.style.opacity = '0';
+        setTimeout(() => el.remove(), 500);
+      });
+    }, 5000); 
+  </script>
+
 </body>
 </html>
