--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -1,5 +1,5 @@
 .movimentacoes-container {
-  width: 90%;
+  width: 100%;
   margin: 60px auto;
   padding: 30px 32px;
   background-color: #fdfdfd;
@@ -30,6 +30,21 @@
   padding: 12px 16px;
   text-align: left;
   border-bottom: 1px solid #e0e0e0;
+}
+.status-pendente td {
+  background-color: #fff7cc; 
+}
+
+.status-atrasado td {
+  background-color: #ffcccc;
+}
+
+.status-devolvido td {
+  background-color: #ccffcc;
+}
+
+.status-ficou-no-cliente td {
+  background-color: #ccffcc;
 }
 
 td {
