--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -31,6 +31,11 @@
   text-align: left;
   border-bottom: 1px solid #e0e0e0;
 }
+
+td {
+  position: relative;
+}
+
 .status-pendente td {
   background-color: #fff7cc; 
 }
@@ -47,9 +52,6 @@
   background-color: #ccffcc;
 }
 
-td {
-  position: relative;
-}
 .movimentacoes-table tbody tr.status-verde {
   background-color: #e0f8e9;
 }
@@ -89,8 +91,8 @@ td {
 .dropdown-acoes {
   display: none;
   position: absolute;
-  top: 110%; 
-  left: 0;
+  top: 110%;
+  right: 0;
   background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -101,6 +103,7 @@ td {
   max-width: 280px;
   white-space: normal;
 }
+
 
 .dropdown-acoes form {
   display: flex;
@@ -134,13 +137,16 @@ button,
   margin-bottom: 1rem;
   text-decoration: none;
 }
+
 .btn-nova-movimentacao:hover {
   background-color: #43a047;
 }
 
+/* Botão: Devolver */
 .btn-devolver {
   background-color: #21f344;
 }
+
 .btn-devolver:hover {
   background-color: #0a9500;
 }
@@ -149,6 +155,7 @@ button,
   background-color: #007bff;
   margin-top: 6px;
 }
+
 .btn-finalizar:hover {
   background-color: #0056b3;
 }
