--- a/src/static/materiais.css
+++ b/src/static/materiais.css
@@ -6,6 +6,7 @@
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.05);
+  margin-top: 30px;
 }
 
 .materiais-header {
