--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -1,12 +1,14 @@
 .movimentacoes-container {
+
   width: 100%;
   margin: 60px auto;
   padding: 30px 32px;
-  background-color: #fdfdfd;
-  border: 1px solid #ddd;
-  border-radius: 10px;
+  background-color: #00000080;
+  color: white;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
+  box-shadow: inset 0 0 10px rgb(255, 255, 255);
   font-family: 'Segoe UI', sans-serif;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
 }
 
 .movimentacoes-table {
@@ -15,6 +17,7 @@
   margin-top: 1rem;
   font-size: 0.95rem;
   background-color: #fff;
+  color: black;
   border-radius: 6px;
   overflow: visible;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
@@ -33,6 +36,7 @@
 }
 .status-pendente td {
   background-color: #fff7cc; 
+  color: black
 }
 
 .status-atrasado td {
@@ -130,9 +134,10 @@ button,
 
 .btn-nova-movimentacao {
   display: inline-block;
-  background-color: #4caf50;
+  background-color: #ff7b00;
   margin-bottom: 1rem;
   text-decoration: none;
+  color: rgb(255, 255, 255)
 }
 .btn-nova-movimentacao:hover {
   background-color: #43a047;
